--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,7 @@ h1, h2, h3, h4, h5, h6, nav{
       display: block;
     }
     #sec-1{
-      background-color: #ffffff;
-      color: black;
+      display: none;
     }
     #sec-5{
       background-color: #ffffff;
@@ -103,13 +102,6 @@ h1, h2, h3, h4, h5, h6, nav{
   height: 40%;
   width: 40%;
 }
-
-@media screen and (max-width: 640px){
-  #imgFormation{
-    width: 100%;
-    margin-bottom: 3.5%;
-  }
-}
 /*fin css section présentation formation*/
 
 /*----*/
@@ -122,8 +114,7 @@ h1, h2, h3, h4, h5, h6, nav{
 }
 
 #imgMetier, #imgTechno{
-  height: 10%;
-  width: 10%;
+  height: 20%;
 }
 
 h2{
@@ -135,14 +126,8 @@ h3{
   font-style: italic;
 }
 
-#titleTechnos{
+#rowMetier2{
   margin-top: 2%;
-}
-
-@media screen and (max-width: 640px){
-  #imgMetier, #imgTechno{
-    width: 100%;
-  }
 }
 /*fin CSS présentation formation*/
 
@@ -157,20 +142,13 @@ h3{
 
 .logo{
   height: auto;
-  width: 25%;
+  width: 15%;
   margin-left: 2%;
   margin-right: 2%;
 }
 
 .link, .logo{
   text-decoration: none;
-}
-
-@media screen and (max-width: 575px){
-  .logo{
-    width: 15%;
-  }
-}
 }
 /*fin CSS présentation équipe*/
 
@@ -183,6 +161,10 @@ h3{
   #secPresformation{
     background-color: #ffffff;
     color: #000000;
+  }
+
+  #imgFormation{
+    height: 10%;
   }
   /*fin css section présentation formation*/
 
